corrected way of view picture - native instead of stretch

--- a/uikit-2.27.4/astam-paintings-style.css
+++ b/uikit-2.27.4/astam-paintings-style.css
@@ -10693,8 +10693,10 @@ select:disabled {
   height: 480px;
   width: 800px;
   overflow: hidden;
-  background-position: center;
-  background-size: 100% 100%;
+  background-position: left top;
+  /* background-size: 100% 100%; */
+  background-size: contain;
+  background-repeat: no-repeat;
   border: none !important;
   box-shadow: inset 1px 1px 10px #333;
 }
